--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Graphics Nepal</title>
     <link rel="icon" type="image/jpg" href="./items/Logo.jpg">
-    <link rel="stylesheet" href="header.css">
-
+    <link rel="stylesheet" href="./styles/header.css">
 </head>
 <body>
     <div class="header">
