--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
     <link rel="stylesheet" href="./styles/header.css">
 </head>
 <body>
-    <div class="header">
-        <img class="logo" src="./items/Logo.jpg" alt="Graphics Nepal Logo">
-    </div>
+
+    <header class="navbar">
+        <div class="logo">
+            <img src="./items/Logo.jpg" alt="Graphics Nepal Logo">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
 </body>
 </html>
