--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header class="navbar">
         <div class="logo">
             <img src="./items/Logo.jpg" alt="Graphics Nepal Logo">
+            <span class="company-name">Graphics Nepal Pvt. Ltd.</span>
         </div>
         <nav>
             <ul>
