--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Graphics Nepal</title>
-    <link rel="icon" type="image/jpg" href="./items/Logo.jpg">
-    <link rel="stylesheet" href="./styles/header.css">
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Graphics Nepal</title>
+        <link rel="icon" type="image/jpg" href="./items/Logo.jpg">
+        <link rel="stylesheet" href="./styles/header.css">
+        <script src="https://cdn.tailwindcss.com"></script>
+    </head>
+    
+
+    <div class="w-full py-4 bg-black sm:block hover:text-red-500">
+        <div class="flex justify-between gap-8">
+            <p class="flex items-center gap-1 text-xs text-white whitespace-nowrap ">Need help?&nbsp;<a class="text-white active:text-white hover:text-red" aria-label="phone-number" href="tel: 9851093692">9851093692</a>|<a class="text-white active:text-white hover:text-red" aria-label="contact" href="/contact">Contact</a></p>
+        </div>
+    </div>
 
     <header class="navbar">
         <div class="logo">
@@ -22,6 +29,9 @@
             </ul>
         </nav>
     </header>
+
+       
+
 <script src="index.js"></script>
 </body>
 </html>
