--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     
 
-    <div class="w-full py-4 bg-black sm:block hover:text-red-500">
+    <div class="w-full py-4 px-2 bg-black sm:block hover:text-red-500">
         <div class="flex justify-between gap-8">
             <p class="flex items-center gap-1 text-xs text-white whitespace-nowrap ">Need help?&nbsp;<a class="text-white active:text-white hover:text-red" aria-label="phone-number" href="tel: 9851093692">9851093692</a>|<a class="text-white active:text-white hover:text-red" aria-label="contact" href="/contact">Contact</a></p>
         </div>
