--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     </head>
     
 
-    <div class="w-full py-4 px-2 bg-black sm:block hover:text-red-500">
+    <div class="w-full py-4 px-2 bg-black sm:block hover:text-red">
         <div class="flex justify-between px-10 gap-8">
-            <p class="flex items-center gap-1 text-xs text-white whitespace-nowrap ">Need help?&nbsp;<a class="text-white active:text-white hover:text-red" aria-label="phone-number" href="tel: 9851093692">9851093692</a>|<a class="text-white active:text-white hover:text-red" aria-label="contact" href="/contact">Contact</a></p>
+            <p class="flex items-center gap-1 text-xs text-white whitespace-nowrap ">Need help?&nbsp;<a class="text-white active:text-white hover:text-red-500" aria-label="phone-number" href="tel: 9851093692">9851093692</a>|<a class="text-white active:text-white hover:text-red-500" aria-label="contact" href="/contact">Contact</a></p>
 
         <div class="flex items-center justify-between gap-11">
             <a aria-label="my-account" href="/dashboard/account"><div class=" items-center gap-2.5 text-white flex-nowrap hidden sm:flex transition ease-in-out duration-300 "><div><svg width="12" height="14" viewBox="0 0 12 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.666664 13V12.3333C0.666664 10.1242 2.45752 8.33331 4.66666 8.33331H7.33333C9.54246 8.33331 11.3333 10.1242 11.3333 12.3333V13" stroke="currentColor" stroke-linecap="round"></path><path d="M5.99999 6.33333C4.52723 6.33333 3.33333 5.13943 3.33333 3.66667C3.33333 2.19391 4.52723 1 5.99999 1C7.47273 1 8.66666 2.19391 8.66666 3.66667C8.66666 5.13943 7.47273 6.33333 5.99999 6.33333Z" stroke="currentColor" stroke-linecap="round"></path>
             </svg>
         </div>
-        <p class="text-xs text-inherit whitespace-nowrap hover:text-red">My Account</p>
+        <p class="text-xs text-inherit whitespace-nowrap hover:text-red-500">My Account</p>
     </div></a>
     <a aria-label="sign-in" href="/customer/account/login"><div class=" items-center text-white gap-2.5 flex-nowrap hidden sm:flex transition ease-in-out duration-300 "><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"><path stroke="currentColor" stroke-linecap="round" stroke-width="1.3" d="M10 2.5h4a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1h-4"></path>
         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.3" d="M3 9h8m0 0L8 6m3 3-3 3"></path></svg>
