--- a/index.html
+++ b/index.html
@@ -29,19 +29,31 @@
     </div>
 </div>
 
-    <header class="navbar">
-        <div class="logo">
-            <img src="./items/Logo.jpg" alt="Graphics Nepal Logo">
-            <span class="company-name">Graphics Nepal Pvt. Ltd.</span>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+<header class="p-4 bg-gray-100 border-b-2 border-black">
+    <div class="flex items-center justify-between">
+      <!-- Logo -->
+      <div class="flex items-center gap-4">
+        <img src="./items/Logo.jpg" alt="Graphics Nepal Logo" class="h-12 w-auto">
+        <span class="text-lg font-bold text-black">Graphics Nepal Pvt. Ltd.</span>
+      </div>
+  
+      <!-- Hamburger Icon -->
+      <button id="menu-toggle" type="button" class="sm:hidden block focus:outline-none" aria-label="Toggle menu">
+        <svg class="w-6 h-6 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M4 6h16M4 12h16M4 18h16"></path>
+        </svg>
+      </button>
+  
+    <!-- Nav Menu -->
+    <nav id="nav-menu" class="mt-4 hidden sm:flex flex-col sm:flex-row gap-4 text-sm sm:text-base">
+      <a href="#" class="hover:bg-red-600 px-3 py-2 rounded text-black hover:text-white transition">Home</a>
+      <a href="#" class="hover:bg-red-600 px-3 py-2 rounded text-black hover:text-white transition">About Us</a>
+      <a href="#" class="hover:bg-red-600 px-3 py-2 rounded text-black hover:text-white transition">Contact</a>
+    </nav>
+  </header>
+</div>
 
     
 
