--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
   </header>
 </div>
 
+
+<div class="slider">
+    <div class="list">
+        <div class="item">
+            <img src=""
+        </div>
+    </div>
+</div>
+
     
 
 <script src="index.js"></script>
