added machine image

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <div class="slider">
     <div class="list">
         <div class="item">
-            <img src=""
+            <img src="./images/1744250446590.jpg" alt="printer image">
         </div>
     </div>
 </div>
