--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Graphics Nepal</title>
         <link rel="icon" type="image/jpg" href="./items/Logo.jpg">
         <link rel="stylesheet" href="./styles/header.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
     
