--- a/index.html
+++ b/index.html
@@ -60,7 +60,13 @@
 <div class="slider">
     <div class="list">
         <div class="item">
-            <img src="./images/1744250446590.jpg" alt="printer image">
+            <img src="./images/1744250446590.jpg" alt="machine image">
+        <div class="item">
+          <img src="./images/_storage_emulated_0_Android_data_com.miui.gallery_cache_SecurityShare_1744250446580.jpg" alt="side image of machine">
+        <div class="item">
+          <img src="./images/1744250446599.jpg" alt="image of printing buddha picture">
+        </div>
+        </div>
         </div>
     </div>
 </div>
