fixed hover issue over contact

--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
     <div class="flex justify-between px-10 gap-8">
       <p class="flex items-center gap-1 text-xs text-white whitespace-nowrap">
         Need help?&nbsp;
-        <a class="text-white hover:text-red-500 transition" href="tel:9851093692">9851093692</a>
-        |
-        <a class="text-white hover:text-red-500 transition" href="/contact">Contact</a>
+        <a class="text-xs hover:text-red-500" href="tel:9851093692">9851093692 | 9808254089 </a>
       </p>
 
       <div class="flex items-center gap-11">
