--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <div class="flex justify-between px-10 gap-8">
       <p class="flex items-center gap-1 text-xs text-white whitespace-nowrap">
         Need help?&nbsp;
-        <a class="text-xs hover:text-red-500" href="tel:9851093692">9851093692 | 9808254089 </a>
+        <a class="text-xs hover:text-red-500" href="tel:9851093692">9851093692</a>
+          |       
+        <a class="text-xs hover:text-red-500" href="tel:9851093692">9808254089</a>
       </p>
 
       <div class="flex items-center gap-11">
@@ -78,13 +80,13 @@
   <div class="slider mt-6 px-4">
     <div class="list grid grid-cols-1 sm:grid-cols-3 gap-4">
       <div class="item">
-        <img src="./images/1744250446590.jpg" alt="machine image" class="w-full h-auto" />
+        <img src="./images/1744250446590.jpg" alt="machine image"/>
       </div>
       <div class="item">
-        <img src="./images/_storage_emulated_0_Android_data_com.miui.gallery_cache_SecurityShare_1744250446580.jpg" alt="side image of machine" class="w-full h-auto" />
+        <img src="./images/_storage_emulated_0_Android_data_com.miui.gallery_cache_SecurityShare_1744250446580.jpg" alt="side image of machine"/>
       </div>
       <div class="item">
-        <img src="./images/1744250446599.jpg" alt="image of printing buddha picture" class="w-full h-auto" />
+        <img src="./images/1744250446599.jpg" alt="image of printing buddha picture"/>
       </div>
     </div>
   </div>
