--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <div class="slider">
     <div class="list">
       <div class="item">
-        <img src="./images/1744250446590.jpg" alt="machine image"/>
+        <img src="./images/PRILNT_1.jpg" alt="machine image"/>
       </div>
       <div class="item">
         <img src="./images/_storage_emulated_0_Android_data_com.miui.gallery_cache_SecurityShare_1744250446580.jpg" alt="side image of machine"/>
