--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <img src="./images/PRILNT_1.jpg" alt="machine image"/>
       </div>
       <div class="item">
-        <img src="./images/_storage_emulated_0_Android_data_com.miui.gallery_cache_SecurityShare_1744250446580.jpg" alt="side image of machine"/>
+        <img src="./images/1744249020301.jpg" alt="side image of machine"/>
       </div>
       <div class="item"> 
         <img src="./images/1744250446599.jpg" alt="image of printing buddha picture"/>
