--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </div>
 
       <ul class="dots">
-        <li></li>
+        <li class="active"></li>
         <li></li>
         <li></li>
         <li></li>
