--- a/index.html
+++ b/index.html
@@ -100,6 +100,12 @@
       <div class="item"> 
         <img src="./images/1744249020370.jpg" alt="image of printing buddha picture"/>
       </div>
+      <div class="item"> 
+        <img src="./images/1744249020370.jpg" alt="image of printing buddha picture"/>
+      </div>
+      <div class="item"> 
+        <img src="./images/1744249020370.jpg" alt="image of printing buddha picture"/>
+      </div>
     </div>
   </div>
 
