--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <header class="p-4 bg-gray-100 border-b-2 border-black">
     <div class="flex items-center justify-between">
       <div class="flex items-center gap-4">
-        <img src="./items/Logo.jpg" alt="Graphics Nepal Logo" class="h-12 w-auto" />
+        <img src="./images/Logo.jpg" alt="Graphics Nepal Logo" class="h-12 w-auto" />
         <span class="text-lg font-bold text-black">GRAPHICS NEPAL PVT. LTD.</span>
       </div>
 
@@ -73,7 +73,6 @@
         <a href="#" class="group px-3 py-2 rounded text-black hover:bg-red-600 transition-colors duration-300">
           <span class="text-black font-bold group-hover:text-white">Contact</span>
         </a>        
-
       </nav>
     </div>
   </header>
