--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <img src="./images/PRILNT_1.jpg" alt="machine image"/>
       </div>
       <div class="item">
-        <img src="./images/1744249020301.jpg" alt="side image of machine"/>
+        <img src="./images/55.png" alt="side image of machine"/>
       </div>
       <div class="item"> 
         <img src="./images/1744249020370.jpg" alt="image of printing buddha picture"/>
