made logo pointered mouse

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="flex items-center justify-between">
       <div class="flex items-center gap-4">
         <img src="./images/Logo.jpg" alt="Graphics Nepal Logo" class="h-12 w-auto" />
-        <span class="text-lg font-bold text-black">GRAPHICS NEPAL PVT. LTD.</span>
+        <a href="#"><span class="text-lg font-bold text-black">GRAPHICS NEPAL PVT. LTD.</span></a>
       </div>
 
       <nav id="nav-menu" class="mt-4 hidden sm:flex flex-col sm:flex-row gap-4 text-sm sm:text-base">
