--- a/index.html
+++ b/index.html
@@ -69,6 +69,25 @@
     </div>
   </header>
 
+  <!-- Image Slider -->
+<div class="relative w-full max-w-4xl mx-auto mt-6">
+  <div class="overflow-hidden rounded-lg">
+    <div id="slider" class="flex transition-transform duration-700 ease-in-out">
+      <img src="./images/slide1.jpg" class="w-full flex-shrink-0" />
+      <img src="./images/slide2.jpg" class="w-full flex-shrink-0" />
+      <img src="./images/slide3.jpg" class="w-full flex-shrink-0" />
+    </div>
+  </div>
+
+  <!-- Navigation Buttons -->
+  <button id="prev" class="absolute top-1/2 left-4 transform -translate-y-1/2 bg-black bg-opacity-50 text-white px-3 py-1 rounded-full hover:bg-opacity-70">
+    &#8592;
+  </button>
+  <button id="next" class="absolute top-1/2 right-4 transform -translate-y-1/2 bg-black bg-opacity-50 text-white px-3 py-1 rounded-full hover:bg-opacity-70">
+    &#8594;
+  </button>
+</div>
+
   <script src="index.js"></script>
 </body>
 </html>
