--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 <div class="relative w-full max-w-4xl mx-auto mt-6">
   <div class="overflow-hidden rounded-lg">
     <div id="slider" class="flex transition-transform duration-700 ease-in-out">
-      <img src="./images/PRILNT_1.jpg" class="w-full flex-shrink-0" />
-      <img src="./images/55.png" class="w-full flex-shrink-0" />
-      <img src="./images" class="w-full flex-shrink-0" />
+      <img src="./images/PRILNT_1.jpg" class="w-full flex-shrink-0" alt=""/>
+      <img src="./images/55.png" class="w-full flex-shrink-0" alt=""/>
+      <img src="./images" class="w-full flex-shrink-0" alt=""/>
     </div>
   </div>
 
