--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div id="slider" class="flex transition-transform duration-700 ease-in-out">
       <img src="./images/PRILNT_1.jpg" class="w-full flex-shrink-0" alt=""/>
       <img src="./images/55.png" class="w-full flex-shrink-0" alt=""/>
-      <img src="./images/1744249020298.jpg" class="w-full flex-shrink-0" alt=""/>
+      <img src="./images/x-stand_banner copy (1).png" class="w-full flex-shrink-0" alt=""/>
     </div>
   </div>
 
