updated code slider

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/jpg" href="./items/Logo.jpg" />
   <link rel="stylesheet" href="./styles/header.css" />
   <script src="https://cdn.tailwindcss.com"></script>
+</head>
 
 <body class="bg-white">
   <!-- Top Bar -->
@@ -80,6 +81,8 @@
   </div>
 
   <!-- Navigation Buttons -->
+   <!-- Dot Navigation -->
+<div id="dots" class="flex justify-center mt-4"></div>
   <button id="prev" class="absolute top-1/2 left-4 transform -translate-y-1/2 bg-black bg-opacity-50 text-white px-3 py-1 rounded-full hover:bg-opacity-70">
     &#8592;
   </button>
@@ -87,6 +90,7 @@
     &#8594;
   </button>
 </div>
+
 
   <script src="index.js"></script>
 </body>
