--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="Description" content="" .="">
   <title>Graphics Nepal</title>
   <link rel="icon" type="image/jpg" href="./items/Logo.jpg" />
   <link rel="stylesheet" href="./styles/header.css" />
