--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="bg-white">
+<body class="bg-white scroll-smooth">
   <!-- Top Bar -->
   <div class="w-full py-4 px-2 bg-black">
     <div class="flex justify-between px-10 gap-8">
@@ -93,6 +93,9 @@
   </button>
 </div>
 
+<div class="Products">
+
+</div>
 
   <script src="index.js"></script>
 </body>
