--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     </div>
   </header>
 
+<div class="gradient-background">
   <!-- Image Slider -->
 <div class="relative w-full max-w-4xl mx-auto mt-6">
   <!--dot navigation-->
@@ -95,6 +96,7 @@
 
 <div class="Products">
 
+</div>
 </div>
 
   <script src="index.js"></script>
