updated header.css to style.css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="Description" content="" .="">
   <title>Graphics Nepal</title>
   <link rel="icon" type="image/jpg" href="./items/Logo.jpg" />
-  <link rel="stylesheet" href="./styles/header.css" />
+  <link rel="stylesheet" href="./styles/style.css" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
