--- a/index.html
+++ b/index.html
@@ -86,18 +86,37 @@
   </div>
 
   <!-- Navigation Buttons -->
-  <button id="prev" class="absolute top-1/2 left-4 transform -translate-y-1/2 bg-black bg-opacity-50 text-white px-3 py-1 rounded-full hover:bg-opacity-70">
-    &#8592;
-  </button>
-  <button id="next" class="absolute top-1/2 right-4 transform -translate-y-1/2 bg-black bg-opacity-50 text-white px-3 py-1 rounded-full hover:bg-opacity-70">
-    &#8594;
-  </button>
+    <button id="prev" class="absolute top-1/2 left-4 transform -translate-y-1/2 bg-black bg-opacity-50 text-white px-3 py-1 rounded-full hover:bg-opacity-70">
+        &#8592;
+    </button>
+    <button id="next" class="absolute top-1/2 right-4 transform -translate-y-1/2 bg-black bg-opacity-50 text-white px-3 py-1 rounded-full hover:bg-opacity-70">
+        &#8594;
+    </button>
+    </div>
+  </div>
 </div>
 
-<div class="Products">
+<div class="px-6 py-10 bg-gray-100">
+  <h2 class="text-2xl font-bold text-center mb-8">Our Products</h2>
 
-</div>
-</div>
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
+    <!-- Item 1 -->
+    <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
+      <img src="./images/item1.jpg" alt="Item 1" class="w-full h-40 object-cover rounded mb-4">
+      <h3 class="font-semibold text-lg">Product Title</h3>
+      <p class="text-sm text-gray-600">Short description goes here.</p>
+    </div>
+
+    <!-- Item 2 -->
+    <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
+      <img src="./images/item2.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <h3 class="font-semibold text-lg">Another Product</h3>
+      <p class="text-sm text-gray-600">Something catchy here too.</p>
+    </div>
+
+    <!-- Add more items as needed -->
+  
+
 
   <script src="index.js"></script>
 </body>
