--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
         <a href="#" class="text-lg font-bold text-black text-center sm:text-left">GRAPHICS NEPAL PVT. LTD.</a>
       </div>
 
-      <!-- Mobile Menu Button -->
+      <!-- Mobile Menu Button 
       <div class="sm:hidden">
         <button onclick="document.getElementById('nav-menu').classList.toggle('hidden')" class="text-black focus:outline-none">
           <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"/>
           </svg>
         </button>
-      </div>
+      </div>-->
 
       <!-- Nav Menu -->
       <nav id="nav-menu" class="hidden sm:flex flex-col sm:flex-row gap-2 sm:gap-4 text-sm sm:text-base">
