--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="max-w-screen-xl mx-auto flex flex-col sm:flex-row items-center justify-between gap-4">
       <!-- Logo and Title -->
       <div class="flex items-center gap-4">
-        <img src="./images/Logo.jpg" alt="Graphics Nepal Logo" class="h-12 w-auto" />
+        <img src="./images/Logo.jpg" alt="Graphics Nepal Logo" class="h-12 w-auto cursor-pointer" />
         <a href="#" class="text-lg font-bold text-black text-center sm:text-left">GRAPHICS NEPAL PVT. LTD.</a>
       </div>
 
@@ -90,10 +90,10 @@
   </div>
 
   <!-- Navigation Buttons -->
-    <button id="prev" class="hidden group-hover:absolute top-1/2 left-4 transform -translate-y-1/2 bg-black bg-opacity-50 text-white px-3 py-1 rounded-full hover:bg-opacity-70">
+    <button id="prev" class="absolute top-1/2 left-4 transform -translate-y-1/2 bg-black bg-opacity-50 text-white px-3 py-1 rounded-full hover:bg-opacity-70">
         &#8592;
     </button>
-    <button id="next" class="hidden group-hover:absolute top-1/2 right-4 transform -translate-y-1/2 bg-black bg-opacity-50 text-white px-3 py-1 rounded-full hover:bg-opacity-70">
+    <button id="next" class="absolute top-1/2 right-4 transform -translate-y-1/2 bg-black bg-opacity-50 text-white px-3 py-1 rounded-full hover:bg-opacity-70">
         &#8594;
     </button>
     </div>
