--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 <body class="bg-white scroll-smooth">
   <!-- Top Bar -->
+  <div class="bg-gray-100">
+    
+        
   <div class="w-full py-2 px-4 bg-black">
     <div class="max-w-screen-xl mx-auto flex flex-col sm:flex-row justify-between items-center gap-2 sm:gap-4 text-center sm:text-left">
       <p class="flex flex-wrap justify-center items-center gap-1 text-xs text-white">
@@ -100,7 +103,7 @@
   </div>
 </div>
 
-<div class="px-6 py-10 bg-gray-100">
+<div class="px-50 py-10 bg-gray-100">
   <h2 class="text-2xl font-bold text-center mb-8">Our Products</h2>
 
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
@@ -121,7 +124,7 @@
     <!-- Add more items as needed -->
   
 
-
+  </div>
   <script src="index.js"></script>
 </body>
 </html>
