--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   </div>
 </div>
 
-<div class="px-50 py-10 bg-gray-100">
+<div class= "py-5 px-40 bg-gray-100">
   <h2 class="text-2xl font-bold text-center mb-8">Our Products</h2>
 
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
@@ -121,8 +121,47 @@
       <p class="text-sm text-gray-600">Something catchy here too.</p>
     </div>
 
-    <!-- Add more items as needed -->
+    <!-- Item 2 -->
+    <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
+      <img src="./images/item2.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <h3 class="font-semibold text-lg">Another Product</h3>
+      <p class="text-sm text-gray-600">Something catchy here too.</p>
+    </div>
   
+    <!-- Item 2 -->
+    <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
+      <img src="./images/item2.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <h3 class="font-semibold text-lg">Another Product</h3>
+      <p class="text-sm text-gray-600">Something catchy here too.</p>
+    </div>
+
+    <!-- Item 2 -->
+    <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
+      <img src="./images/item2.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <h3 class="font-semibold text-lg">Another Product</h3>
+      <p class="text-sm text-gray-600">Something catchy here too.</p>
+    </div>
+
+    <!-- Item 2 -->
+    <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
+      <img src="./images/item2.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <h3 class="font-semibold text-lg">Another Product</h3>
+      <p class="text-sm text-gray-600">Something catchy here too.</p>
+    </div>
+
+    <!-- Item 2 -->
+    <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
+      <img src="./images/item2.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <h3 class="font-semibold text-lg">Another Product</h3>
+      <p class="text-sm text-gray-600">Something catchy here too.</p>
+    </div>
+
+    <!-- Item 2 -->
+    <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
+      <img src="./images/item2.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <h3 class="font-semibold text-lg">Another Product</h3>
+      <p class="text-sm text-gray-600">Something catchy here too.</p>
+    </div>
 
   </div>
   <script src="index.js"></script>
