--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
     <!-- Item 1 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
-      <img src="./images/item1.jpg" alt="Item 1" class="w-full h-40 object-cover rounded mb-4">
-      <h3 class="font-semibold text-lg">Product Title</h3>
-      <p class="text-sm text-gray-600">Short description goes here.</p>
+      <img src="./items/stamp self ink.jpg" alt="Item 1" class="w-full h-40 object-cover rounded mb-4">
+      <h3 class="font-semibold text-lg">Self Ink Stamp</h3>
+      <p class="text-sm text-gray-600">Customizable Self-Ink Stamp</p>
     </div>
 
     <!-- Item 2 -->
