--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
       <img src="./items/stamp self ink.jpg" alt="Item 1" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="font-semibold text-lg">Self Ink Stamp</h3>
-      <p class="text-sm text-gray-600">Customizable Self-Ink Stamp</p>
+      <p class="text-sm text-gray-600">Customizable Self-Ink Stamp in Square, Rectangle or Circle</p>
     </div>
 
     <!-- Item 2 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
-      <img src="./images/item2.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
-      <h3 class="font-semibold text-lg">Another Product</h3>
-      <p class="text-sm text-gray-600">Something catchy here too.</p>
+      <img src="./items/flex print.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <h3 class="font-semibold text-lg">Flex Print</h3>
+      <p class="text-sm text-gray-600">Custom Flex Print according to your needs. For Business/Personal use.</p>
     </div>
 
     <!-- Item 2 -->
