--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
 
     <!-- Item 2 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
-      <img src="./images/item2.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
-      <h3 class="font-semibold text-lg">Another Product</h3>
-      <p class="text-sm text-gray-600">Something catchy here too.</p>
+      <img src="./items/vinyl sticker.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <h3 class="font-semibold text-lg">Vinyl Sticker</h3>
+      <p class="text-sm text-gray-600">Vinyl Sticker available for various purposes.</p>
     </div>
   
     <!-- Item 2 -->
