--- a/index.html
+++ b/index.html
@@ -117,21 +117,21 @@
     <!-- Item 2 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
       <img src="./items/flex print.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
-      <h3 class="font-semibold text-lg">Flex Print</h3>
+      <h3 class="font-semibold text-lg">FLEX PRINT</h3>
       <p class="text-sm text-gray-600">Custom Flex Print according to your needs. For Business/Personal use.</p>
     </div>
 
     <!-- Item 2 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
       <img src="./items/vinyl sticker.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
-      <h3 class="font-semibold text-lg">Vinyl Sticker</h3>
+      <h3 class="font-semibold text-lg">VINYL STICKER</h3>
       <p class="text-sm text-gray-600">Vinyl Sticker available for various purposes.</p>
     </div>
   
     <!-- Item 2 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
       <img src="./images/item2.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
-      <h3 class="font-semibold text-lg">Another Product</h3>
+      <h3 class="font-semibold text-lg">ID CARD & STRAP PRINT</h3>
       <p class="text-sm text-gray-600">Something catchy here too.</p>
     </div>
 
