--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <!-- Item 1 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
       <img src="./items/stamp self ink.jpg" alt="Item 1" class="w-full h-40 object-cover rounded mb-4">
-      <h3 class="font-semibold text-lg">Self Ink Stamp</h3>
+      <h3 class="font-semibold text-lg">SELF INK STAMP</h3>
       <p class="text-sm text-gray-600">Customizable Self-Ink Stamp in Square, Rectangle or Circle</p>
     </div>
 
