--- a/index.html
+++ b/index.html
@@ -130,16 +130,16 @@
   
     <!-- Item 2 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
-      <img src="./images/item2.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <img src="./items/1744249020298.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="font-semibold text-lg">ID CARD & STRAP PRINT</h3>
-      <p class="text-sm text-gray-600">Something catchy here too.</p>
+      <p class="text-sm text-gray-600">High Quality Strap and Id card print for Business/College/School.</p>
     </div>
 
     <!-- Item 2 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
       <img src="./images/item2.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
-      <h3 class="font-semibold text-lg">Another Product</h3>
-      <p class="text-sm text-gray-600">Something catchy here too.</p>
+      <h3 class="font-semibold text-lg">CERTIFICATE PRINT</h3>
+      <p class="text-sm text-gray-600">Customizable Certificate print for any event for any business/College/School.</p>
     </div>
 
     <!-- Item 2 -->
