--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
     <!-- Item 2 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
-      <img src="./images/item2.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <img src="./items/certificate.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="font-semibold text-lg">CERTIFICATE PRINT</h3>
       <p class="text-sm text-gray-600">Customizable Certificate print for any event for Business/College/School.</p>
     </div>
