--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
     <!-- Item 2 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
       <img src="./images/item2.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
-      <h3 class="font-semibold text-lg">Another Product</h3>
-      <p class="text-sm text-gray-600">Something catchy here too.</p>
+      <h3 class="font-semibold text-lg">POCKET STAMP</h3>
+      <p class="text-sm text-gray-600">Handy and easy to carry. Pocket stamp can literally fit in your pockets.</p>
     </div>
 
     <!-- Item 2 -->
