--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 </div>
 
 <div class= "py-5 px-40 bg-gray-100">
-  <h2 class="text-2xl font-bold text-center mb-8">Our Products</h2>
+  <h2 class="text-2xl font-bold text-center mb-8">OUR PRODUCTS</h2>
 
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
     <!-- Item 1 -->
@@ -144,16 +144,16 @@
 
     <!-- Item 2 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
-      <img src="./images/item2.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <img src="./items/1744249020294.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="font-semibold text-lg">POCKET STAMP</h3>
       <p class="text-sm text-gray-600">Handy and easy to carry. Pocket stamp can literally fit in your pockets.</p>
     </div>
 
     <!-- Item 2 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
-      <img src="./images/item2.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
-      <h3 class="font-semibold text-lg">Another Product</h3>
-      <p class="text-sm text-gray-600">Something catchy here too.</p>
+      <img src="./items/xstand banner.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <h3 class="font-semibold text-lg">X-STAND</h3>
+      <p class="text-sm text-gray-600">Keep your event stylish and fashionable with our X-STAND. Reusable and easy to use.</p>
     </div>
 
     <!-- Item 2 -->
