--- a/index.html
+++ b/index.html
@@ -121,42 +121,70 @@
       <p class="text-sm text-gray-600">Custom Flex Print according to your needs. For Business/Personal use.</p>
     </div>
 
-    <!-- Item 2 -->
+    <!-- Item 3 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
       <img src="./items/vinyl sticker.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="font-semibold text-lg">VINYL STICKER</h3>
       <p class="text-sm text-gray-600">Vinyl Sticker available for various purposes.</p>
     </div>
   
-    <!-- Item 2 -->
+    <!-- Item 4 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
       <img src="./items/1744249020298.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="font-semibold text-lg">ID CARD & STRAP PRINT</h3>
       <p class="text-sm text-gray-600">High Quality Strap and Id card print for Business/College/School.</p>
     </div>
 
-    <!-- Item 2 -->
+    <!-- Item 5 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
       <img src="./items/certificate.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="font-semibold text-lg">CERTIFICATE PRINT</h3>
       <p class="text-sm text-gray-600">Customizable Certificate print for any event for Business/College/School.</p>
     </div>
 
-    <!-- Item 2 -->
+    <!-- Item 6 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
       <img src="./items/1744249020294.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="font-semibold text-lg">POCKET STAMP</h3>
       <p class="text-sm text-gray-600">Handy and easy to carry. Pocket stamp can literally fit in your pockets.</p>
     </div>
 
-    <!-- Item 2 -->
+    <!-- Item 7 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
       <img src="./items/xstand banner.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="font-semibold text-lg">X-STAND</h3>
       <p class="text-sm text-gray-600">Keep your event stylish and fashionable with our X-STAND. Reusable and easy to use.</p>
     </div>
 
-    <!-- Item 2 -->
+    <!-- Item 8 -->
+    <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
+      <img src="./items/PVCPIPEA-1-2500x2500.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <h3 class="font-semibold text-lg">BUNTING PIPE</h3>
+      <p class="text-sm text-gray-600">Need to hang your banner on the wall? Our Bunting Pipe can help you.</p>
+    </div>
+
+    <!-- Item 9 -->
+    <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
+      <img src="./items/PVCPIPEA-1-2500x2500.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <h3 class="font-semibold text-lg">BUNTING PIPE</h3>
+      <p class="text-sm text-gray-600">Need to hang your banner on the wall? Our Bunting Pipe can help you.</p>
+    </div>
+
+    <!-- Item 10 -->
+    <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
+      <img src="./items/PVCPIPEA-1-2500x2500.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <h3 class="font-semibold text-lg">BUNTING PIPE</h3>
+      <p class="text-sm text-gray-600">Need to hang your banner on the wall? Our Bunting Pipe can help you.</p>
+    </div>
+
+    <!-- Item 11 -->
+    <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
+      <img src="./items/PVCPIPEA-1-2500x2500.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <h3 class="font-semibold text-lg">BUNTING PIPE</h3>
+      <p class="text-sm text-gray-600">Need to hang your banner on the wall? Our Bunting Pipe can help you.</p>
+    </div>
+
+    <!-- Item 12 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
       <img src="./items/PVCPIPEA-1-2500x2500.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="font-semibold text-lg">BUNTING PIPE</h3>
