--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
 
     <!-- Item 9 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
-      <img src="./items/PVCPIPEA-1-2500x2500.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
-      <h3 class="font-semibold text-lg">BUNTING PIPE</h3>
-      <p class="text-sm text-gray-600">Need to hang your banner on the wall? Our Bunting Pipe can help you.</p>
+      <img src="./items/Forex board.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <h3 class="font-semibold text-lg">FOREX BOARD</h3>
+      <p class="text-sm text-gray-600">A board which when styled with vinyl stickers; looks attractive and premium.</p>
     </div>
 
     <!-- Item 10 -->
