--- a/index.html
+++ b/index.html
@@ -172,23 +172,23 @@
 
     <!-- Item 10 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
-      <img src="./items/PVCPIPEA-1-2500x2500.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
-      <h3 class="font-semibold text-lg">BUNTING PIPE</h3>
-      <p class="text-sm text-gray-600">Need to hang your banner on the wall? Our Bunting Pipe can help you.</p>
+      <img src="./items/visiting card.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <h3 class="font-semibold text-lg">VISITING CARD</h3>
+      <p class="text-sm text-gray-600">Custom Business cards for marketing your Business to the world.</p>
     </div>
 
     <!-- Item 11 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
-      <img src="./items/PVCPIPEA-1-2500x2500.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
-      <h3 class="font-semibold text-lg">BUNTING PIPE</h3>
-      <p class="text-sm text-gray-600">Need to hang your banner on the wall? Our Bunting Pipe can help you.</p>
+      <img src="./items/diamond stamp.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <h3 class="font-semibold text-lg">DIAMOND STAMP</h3>
+      <p class="text-sm text-gray-600">Give your office that premium look. Stamp in ELEGANCE.</p>
     </div>
 
     <!-- Item 12 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
-      <img src="./items/PVCPIPEA-1-2500x2500.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
-      <h3 class="font-semibold text-lg">BUNTING PIPE</h3>
-      <p class="text-sm text-gray-600">Need to hang your banner on the wall? Our Bunting Pipe can help you.</p>
+      <img src="./items/number plate.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <h3 class="font-semibold text-lg">NUMBER PLATE</h3>
+      <p class="text-sm text-gray-600">Fined by Police for not having a good number plate? Restore your Number plate in just minutes.</p>
     </div>
 
   </div>
