--- a/index.html
+++ b/index.html
@@ -192,6 +192,55 @@
     </div>
 
   </div>
+
+  <footer class="bg-gray-900 text-white px-6 py-10">
+  <div class="max-w-screen-xl mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8">
+    
+    <!-- Company Info -->
+    <div>
+      <h2 class="text-xl font-bold mb-4">Graphics Nepal</h2>
+      <p class="text-sm text-gray-400">Your one-stop solution for all branding and printing needs.</p>
+    </div>
+
+    <!-- Links -->
+    <div>
+      <h3 class="text-lg font-semibold mb-3">Links</h3>
+      <ul class="space-y-2 text-gray-400 text-sm">
+        <li><a href="#" class="hover:text-white transition">Home</a></li>
+        <li><a href="#" class="hover:text-white transition">About</a></li>
+        <li><a href="#" class="hover:text-white transition">Products</a></li>
+        <li><a href="#" class="hover:text-white transition">Contact</a></li>
+      </ul>
+    </div>
+
+    <!-- Services -->
+    <div>
+      <h3 class="text-lg font-semibold mb-3">Services</h3>
+      <ul class="space-y-2 text-gray-400 text-sm">
+        <li><a href="#" class="hover:text-white transition">Flex Print</a></li>
+        <li><a href="#" class="hover:text-white transition">Vinyl Sticker</a></li>
+        <li><a href="#" class="hover:text-white transition">ID Card</a></li>
+        <li><a href="#" class="hover:text-white transition">Stamp</a></li>
+      </ul>
+    </div>
+
+    <!-- Social Media -->
+    <div>
+      <h3 class="text-lg font-semibold mb-3">Follow Us</h3>
+      <div class="flex gap-4 text-xl">
+        <a href="#" class="hover:text-blue-500"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" class="hover:text-pink-500"><i class="fab fa-instagram"></i></a>
+        <a href="#" class="hover:text-blue-400"><i class="fab fa-twitter"></i></a>
+        <a href="#" class="hover:text-red-600"><i class="fab fa-youtube"></i></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="mt-10 border-t border-gray-700 pt-6 text-center text-sm text-gray-500">
+    &copy; 2025 Graphics Nepal. All rights reserved.
+  </div>
+</footer>
+
   <script src="index.js"></script>
 </body>
 </html>
