updated SEO code alt

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="Description" content="" .="">
+  <meta name="description" content="Graphics Nepal - Your one-stop solution for branding and printing needs." />
+  <meta name="description" content="Graphics Nepal offers high-quality printing and branding solutions including stamps, flex prints, ID cards, and more.">
   <title>Graphics Nepal</title>
   <link rel="icon" type="image/jpg" href="./items/Logo.jpg" />
   <link rel="stylesheet" href="./styles/style.css" />
@@ -86,9 +87,9 @@
   <div class="overflow-hidden rounded-lg">
   <div class="overflow-hidden rounded-lg">
     <div id="slider" class="flex transition-transform duration-700 ease-in-out">
-      <img src="./images/PRILNT_1.jpg" class="w-full flex-shrink-0" alt=""/>
-      <img src="./images/55.png" class="w-full flex-shrink-0" alt=""/>
-      <img src="./images/x-stand_banner copy (1).png" class="w-full flex-shrink-0" alt=""/>
+      <img src="./images/PRILNT_1.jpg" class="w-full flex-shrink-0" alt="Flex Print by Graphics Nepal"/>
+      <img src="./images/55.png" class="w-full flex-shrink-0" alt="Id Card print and vinyl sticker by Graphics Nepal"/>
+      <img src="./images/x-stand_banner copy (1).png" class="w-full flex-shrink-0" alt="X stand for flex by Graphics Nepal"/>
     </div>
   </div>
 
@@ -103,90 +104,90 @@
   </div>
 </div>
 
-<div class= "py-5 px-40 bg-gray-100">
+<div class="py-5 px-4 sm:px-10 md:px-20 lg:px-40 bg-gray-100">
   <h2 class="text-2xl font-bold text-center mb-8">OUR PRODUCTS</h2>
 
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
     <!-- Item 1 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
-      <img src="./items/stamp self ink.jpg" alt="Item 1" class="w-full h-40 object-cover rounded mb-4">
+      <img src="./items/stamp self ink.jpg" alt="Self ink stamp by Graphics Nepal" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="font-semibold text-lg">SELF INK STAMP</h3>
       <p class="text-sm text-gray-600">Customizable Self-Ink Stamp in Square, Rectangle or Circle</p>
     </div>
 
     <!-- Item 2 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
-      <img src="./items/flex print.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <img src="./items/flex print.jpg" alt="Flex print by Graphics Nepal" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="font-semibold text-lg">FLEX PRINT</h3>
       <p class="text-sm text-gray-600">Custom Flex Print according to your needs. For Business/Personal use.</p>
     </div>
 
     <!-- Item 3 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
-      <img src="./items/vinyl sticker.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <img src="./items/vinyl sticker.jpg" alt="Vinyl sticker print by Graphics Nepal" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="font-semibold text-lg">VINYL STICKER</h3>
       <p class="text-sm text-gray-600">Vinyl Sticker available for various purposes.</p>
     </div>
   
     <!-- Item 4 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
-      <img src="./items/1744249020298.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <img src="./items/1744249020298.jpg" alt="Id card print and strap print by Graphics Nepal" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="font-semibold text-lg">ID CARD & STRAP PRINT</h3>
       <p class="text-sm text-gray-600">High Quality Strap and Id card print for Business/College/School.</p>
     </div>
 
     <!-- Item 5 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
-      <img src="./items/certificate.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <img src="./items/certificate.jpg" alt="Certificate print by Graphics Nepal" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="font-semibold text-lg">CERTIFICATE PRINT</h3>
       <p class="text-sm text-gray-600">Customizable Certificate print for any event for Business/College/School.</p>
     </div>
 
     <!-- Item 6 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
-      <img src="./items/1744249020294.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <img src="./items/1744249020294.jpg" alt="Pocket self ink stamp by Graphics Nepal" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="font-semibold text-lg">POCKET STAMP</h3>
       <p class="text-sm text-gray-600">Handy and easy to carry. Pocket stamp can literally fit in your pockets.</p>
     </div>
 
     <!-- Item 7 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
-      <img src="./items/xstand banner.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <img src="./items/xstand banner.jpg" alt="x stand for banner/flex by Graphics Nepal" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="font-semibold text-lg">X-STAND</h3>
       <p class="text-sm text-gray-600">Keep your event stylish and fashionable with our X-STAND. Reusable and easy to use.</p>
     </div>
 
     <!-- Item 8 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
-      <img src="./items/PVCPIPEA-1-2500x2500.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <img src="./items/PVCPIPEA-1-2500x2500.jpg" alt="Bunting pipe for banner/flex by Graphics Nepal" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="font-semibold text-lg">BUNTING PIPE</h3>
       <p class="text-sm text-gray-600">Need to hang your banner on the wall? Our Bunting Pipe can help you.</p>
     </div>
 
     <!-- Item 9 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
-      <img src="./items/Forex board.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <img src="./items/Forex board.jpg" alt="Forex by Graphics Nepal for vinyl sticker" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="font-semibold text-lg">FOREX BOARD</h3>
       <p class="text-sm text-gray-600">A board which when styled with vinyl stickers; looks attractive and premium.</p>
     </div>
 
     <!-- Item 10 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
-      <img src="./items/visiting card.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <img src="./items/visiting card.jpg" alt="Visiting card print by Graphics Nepal" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="font-semibold text-lg">VISITING CARD</h3>
       <p class="text-sm text-gray-600">Custom Business cards for marketing your Business to the world.</p>
     </div>
 
     <!-- Item 11 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
-      <img src="./items/diamond stamp.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <img src="./items/diamond stamp.jpg" alt="Diamond self ink stamp by Graphics Nepal" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="font-semibold text-lg">DIAMOND STAMP</h3>
       <p class="text-sm text-gray-600">Give your office that premium look. Stamp in ELEGANCE.</p>
     </div>
 
     <!-- Item 12 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
-      <img src="./items/number plate.jpg" alt="Item 2" class="w-full h-40 object-cover rounded mb-4">
+      <img src="./items/number plate.jpg" alt="Number plate for bike and car by Graphics Nepal" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="font-semibold text-lg">NUMBER PLATE</h3>
       <p class="text-sm text-gray-600">Fined by Police for not having a good number plate? Restore your Number plate in just minutes.</p>
     </div>
