--- a/index.html
+++ b/index.html
@@ -229,13 +229,11 @@
     <div>
       <h3 class="text-lg font-semibold mb-3">Follow Us</h3>
       <div class="flex gap-4 text-xl">
-        <a href="#" class="hover:text-blue-500"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="hover:text-pink-500"><i class="fab fa-instagram"></i></a>
-        <a href="#" class="hover:text-blue-400"><i class="fab fa-twitter"></i></a>
-        <a href="#" class="hover:text-red-600"><i class="fab fa-youtube"></i></a>
+        <a href="#" aria-label="Facebook" class="hover:text-blue-500"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" aria-label="Facebook" class="hover:text-pink-500"><i class="fab fa-instagram"></i></a>
+        <a href="#" aria-label="Facebook" class="hover:text-red-600"><i class="fab fa-youtube"></i></a>
       </div>
     </div>
-  </div>
 
   <div class="mt-10 border-t border-gray-700 pt-6 text-center text-sm text-gray-500">
     &copy; 2025 Graphics Nepal. All rights reserved.
