--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Graphics Nepal - Your one-stop solution for branding and printing needs." />
-  <meta name="description" content="Graphics Nepal offers high-quality printing and branding solutions including stamps, flex prints, ID cards, and more.">
+  <meta name="description" content="Graphics Nepal offers high-quality printing and branding solutions including stamps, flex prints, ID cards, and more." />
+  <meta name="keywords" content="printing, branding, graphics nepal, flex print, stamps, ID cards" />
   <title>Graphics Nepal</title>
   <link rel="icon" type="image/jpg" href="./items/Logo.jpg" />
   <link rel="stylesheet" href="./styles/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -234,6 +235,7 @@
         <a href="#" aria-label="Facebook" class="hover:text-red-600"><i class="fab fa-youtube"></i></a>
       </div>
     </div>
+  </div>
 
   <div class="mt-10 border-t border-gray-700 pt-6 text-center text-sm text-gray-500">
     &copy; 2025 Graphics Nepal. All rights reserved.
