--- a/index.html
+++ b/index.html
@@ -105,9 +105,8 @@
   </div>
 </div>
 
-<div class="py-5 px-4 sm:px-10 md:px-20 lg:px-40 bg-gray-100">
-  <h2 class="text-2xl font-bold text-center mb-8">OUR PRODUCTS</h2>
-
+<div class="product-section">
+  <h1 class="text-2xl font-bold text-center mb-8">OUR PRODUCTS</h1>
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
     <!-- Item 1 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
