--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </div>
 
   <!-- Header -->
-  <header class="p-4 bg-gray-100 border-b-2 border-black">
+<header class="p-4 bg-gray-100 border-b-2 border-black sticky top-0 z-50">
     <div class="max-w-screen-xl mx-auto flex flex-col sm:flex-row items-center justify-between gap-4">
       <!-- Logo and Title -->
       <div class="flex items-center gap-4">
@@ -106,7 +106,7 @@
 </div>
 
 <div class="product-section">
-  <h1 class="text-2xl font-bold text-center mb-8">OUR PRODUCTS</h1>
+  <h1 class="text-3xl text-blue-500 font-bold text-center mb-8">OUR PRODUCTS</h1>
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
     <!-- Item 1 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
@@ -191,10 +191,10 @@
       <h3 class="font-semibold text-lg">NUMBER PLATE</h3>
       <p class="text-sm text-gray-600">Fined by Police for not having a good number plate? Restore your Number plate in just minutes.</p>
     </div>
-
+  </div>
   </div>
 
-  <footer class="bg-gray-900 text-white px-6 py-10">
+  <footer class="bg-gray-900 text-white px-6 py-10 mt-px-5">
   <div class="max-w-screen-xl mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8">
     
     <!-- Company Info -->
