--- a/index.html
+++ b/index.html
@@ -241,6 +241,11 @@
   </div>
 </footer>
 
+<button onclick="window.scrollTo({ top: 0, behavior: 'smooth' });" 
+  class="fixed bottom-6 right-6 bg-black text-white p-2 rounded-full shadow-lg hover:bg-red-600 transition">
+  ↑
+</button>
+
   <script src="index.js"></script>
 </body>
 </html>
