--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 </footer>
 
 <button onclick="window.scrollTo({ top: 0, behavior: 'smooth' });" 
-  class="fixed bottom-6 right-6 bg-black text-white p-2 rounded-full shadow-lg hover:bg-red-600 transition">
+  class="fixed bottom-6 right-6 bg-red-600 text-white w-10 h-10 flex items-center justify-center rounded-full shadow-lg hover:bg-red-700 transition">
   ↑
 </button>
 
