--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 </div>
 
 <div class="product-section">
-  <h1 class="text-3xl text-blue-500 font-bold text-center mb-8">OUR PRODUCTS</h1>
+  <h1 class="text-5xl font-bold text-center mb-8 text-stroke">OUR PRODUCTS</h1>
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
     <!-- Item 1 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
