--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       <h3 class="text-lg font-semibold mb-3">Links</h3>
       <ul class="space-y-2 text-gray-400 text-sm">
         <li><a href="#" class="hover:text-white transition">Home</a></li>
-        <li><a href="#" class="hover:text-white transition">About</a></li>
+        <li><a href="#" class="hover:text-white transition">About Us</a></li>
         <li><a href="#" class="hover:text-white transition">Products</a></li>
         <li><a href="#" class="hover:text-white transition">Contact</a></li>
       </ul>
