added new service in service section

--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
         <li><a href="#" class="hover:text-white transition">Vinyl Sticker</a></li>
         <li><a href="#" class="hover:text-white transition">ID Card</a></li>
         <li><a href="#" class="hover:text-white transition">Stamp</a></li>
+        <li><a href="#" class="hover:text-white transition">Bill Pad</a></li>
       </ul>
     </div>
 
