--- a/index.html
+++ b/index.html
@@ -105,8 +105,9 @@
   </div>
 </div>
 
-<section>
-  <h1 class="text-5xl font-bold text-center mb-8 text-stroke">OUR PRODUCTS</h1>
+<section aria-labelledby="products">
+  <div class="products">
+  <h1 class="text-5xl font-bold text-center mb-8 text-blue-500 mt-px-5">OUR PRODUCTS</h1>
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
     <!-- Item 1 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
@@ -192,6 +193,7 @@
       <p class="text-sm text-gray-600">Fined by Police for not having a good number plate? Restore your Number plate in just minutes.</p>
     </div>
   </div>
+</div>
 </section>
 
   <footer class="bg-gray-900 text-white px-6 py-10 mt-px-5">
