--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 <div class="gradient-background">
   <!-- Image Slider -->
-<div class="group relative w-full max-w-4xl mx-auto mt-6">
+<div class="group relative w-full max-w-screen-xl mx-auto mt-6">
   <!--dot navigation-->
   <div id="dots" class="absolute bottom-4 left-1/2 -translate-x-1/2 z-10 flex justify-center"></div>
   <div class="overflow-hidden rounded-lg">
@@ -105,9 +105,9 @@
   </div>
 </div>
 
-<section aria-labelledby="products">
-  <div class="products">
-  <h1 class="text-5xl font-bold text-center mb-8 text-blue-500 mt-px-5">OUR PRODUCTS</h1>
+<section aria-labelledby="products" class="bg-yellow-300 py-10">
+  <div class="products bg-yellow-300 max-w-screen-xl mx-auto px-4">
+  <h1 class="text-5xl font-bold text-center mb-8 text-black mt-10">OUR PRODUCTS</h1>
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
     <!-- Item 1 -->
     <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
