--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       <!-- Nav Menu -->
       <nav id="nav-menu" class="hidden sm:flex flex-col sm:flex-row gap-2 sm:gap-4 text-sm sm:text-base">
-        <a href="#" class="group px-3 py-2 rounded text-black hover:bg-red-600 transition-colors duration-300">
+        <a href="index.html" class="group px-3 py-2 rounded text-black hover:bg-red-600 transition-colors duration-300">
           <span class="font-bold group-hover:text-white">Home</span>
         </a>
         <a href="#" class="group px-3 py-2 rounded text-black hover:bg-red-600 transition-colors duration-300">
