--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Graphics Nepal offers high-quality printing and branding solutions including stamps, flex prints, ID cards, and more." />
   <meta name="keywords" content="printing, branding, graphics nepal, flex print, stamps, ID cards" />
@@ -53,7 +53,7 @@
       <!-- Logo and Title -->
       <div class="flex items-center gap-4">
         <img src="./images/Logo.jpg" alt="Graphics Nepal Logo" class="h-12 w-auto cursor-pointer" />
-        <a href="#" class="text-lg font-bold text-black text-center sm:text-left">GRAPHICS NEPAL PVT. LTD.</a>
+        <a href="index.html" class="text-lg font-bold text-black text-center sm:text-left">GRAPHICS NEPAL PVT. LTD.</a>
       </div>
 
       <!-- Mobile Menu Button 
